yaml/loadBalancer_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-lb
  namespace: dev
spec:
  type: LoadBalancer
  selector:
    app: demo
  ports:
    - port: 80
      targetPort: 80
